[package]
name = "project_euler_rust"
version = "0.1.0"
edition = "2018"

[dependencies]

[[bin]]
name = "p018_fastr"
path = "p018_fast.rs"

[[bin]]
name = "p018_simpler"
path = "p018_simple.rs"

[[bin]]
name = "p067_fastr"
path = "p067_fast.rs"

[[bin]]
name = "p067_simpler"
path = "p067_simple.rs"