[package]
name = "project_euler_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
integer-sqrt = "0.1.5"
itertools = "0.13.0"

[[bin]]
name = "p002r"
path = "p002.rs"

[[bin]]
name = "p003r"
path = "p003.rs"

[[bin]]
name = "p004r"
path = "p004.rs"

[[bin]]
name = "p005r"
path = "p005.rs"

[[bin]]
name = "p006r"
path = "p006.rs"

[[bin]]
name = "p007r"
path = "p007.rs"

[[bin]]
name = "p008r"
path = "p008.rs"

[[bin]]
name = "p010r"
path = "p010.rs"

[[bin]]
name = "p011r"
path = "p011.rs"

[[bin]]
name = "p018_fastr"
path = "p018_fast.rs"

[[bin]]
name = "p018_simpler"
path = "p018_simple.rs"

[[bin]]
name = "p022r"
path = "p022.rs"

[[bin]]
name = "p035r"
path = "p035.rs"

[[bin]]
name = "p037r"
path = "p037.rs"

[[bin]]
name = "p049r"
path = "p049.rs"

[[bin]]
name = "p050r"
path = "p050.rs"

[[bin]]
name = "p067_fastr"
path = "p067_fast.rs"

[[bin]]
name = "p067_simpler"
path = "p067_simple.rs"

[[bin]]
name = "p081r"
path = "p081.rs"

[[bin]]
name = "p082r"
path = "p082.rs"

[[bin]]
name = "p096r"
path = "p096.rs"

[[bin]]
name = "p108r"
path = "p108.rs"

[[bin]]
name = "p145r"
path = "p145.rs"

[[bin]]
name = "p205_simpler"
path = "p205_simple.rs"

[[bin]]
name = "p205_fastr"
path = "p205_fast.rs"

[[bin]]
name = "p500r"
path = "p500.rs"

[[bin]]
name = "p800r"
path = "p800.rs"

[[bin]]
name = "p808r"
path = "p808.rs"

[[bin]]
name = "p853r"
path = "p853.rs"
